--- a/FXExperienceTools/nbproject/project.properties
+++ b/FXExperienceTools/nbproject/project.properties
@@ -27,7 +27,7 @@ javadoc.private=false
 javadoc.splitindex=false
 javadoc.use=false
 javadoc.version=false
-main.class=com.fxexperience.tools.ToolsApp
+main.class=com.fxexperience.tools.main.ToolsApp
 mkdist.disabled=false
 platform.active=default_platform
 platform.home=F:/Java/Java1.8.77_x86/jdk1.8.0_77
